Set --add-modules as environment-variable as well as we need to enable it in Ant itself for the forbidden-api-checks
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1776634 13f79535-47bb-0310-9956-ffa450edef68